samples/_failures_safe/1761264016_0bb740_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f095f0a8.c: In function ‘main’:
./samples/SAFE/__tmp_f095f0a8.c:168:12: error: missing terminating " character
  168 |     printf("Enter text to tokenize (max
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f095f0a8.c:168:5: error: expected expression at end of input
  168 |     printf("Enter text to tokenize (max
      |     ^~~~~~
./samples/SAFE/__tmp_f095f0a8.c:168:5: error: expected declaration or statement at end of input
